--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1jJUOKgQRsmg8GvQCOB40bKjM-dPA0t6o/view">resumelink</a></p>
 	          </div>
           </div>
 
