--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="15">0</span> <span>+15</span>
+									<span class="number" data-number="15">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/rashan-rahul-0740382bb/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -318,7 +318,7 @@
         </div>
 
 		<div class="row">
-			<h1 class="big-4">Experience</h1>
+			<h1 class="big-4">Experiences</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
@@ -330,7 +330,7 @@
 						<h2>QA Engineering Intern</h2>
 						<span class="position"> Dialog Axiata PLC</span>
 			
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
+						<p class="mt-4"> 
 							<ul>
 								<li>Performed functional, regression, and API testing for GSM, HBB, and DTV services.</li>
 								<li>Created and executed test cases in Jira; reported defects with clear documentation.</li>
@@ -497,10 +497,10 @@
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
-             <!-- <div class="text">
-                <strong class="number" data-number="1000">0</strong>
-                <span>Mentored Students</span>
-              </div> -->
+             <div class="text">
+                <strong class="number" data-number="6 Months">0</strong>
+                <span>Experiences</span>
+              </div> 
             </div>
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
