--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
              <div class="text">
-                <strong class="number" data-number="6">Months</strong>
+                <strong class="number" data-number="6">0</strong>
                 <span>Experiences</span>
               </div> 
             </div>
