--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
 				
-	          <div class="one-third js-fullheight order-md-last img" style="background-repeat: no-repeat;"> 
+	          <div class="one-third js-fullheight order-md-last img" style="background-repeat: no-repeat;background-image:url(./images/300\ re.png);"> 
 				
 	          	 <div class="overlay"></div>
 	          	</div>
