--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
 				
-	          <div class="one-third js-fullheight order-md-last img" style="background-repeat: no-repeat;background-image:url();"> 
+	          <div class="one-third js-fullheight order-md-last img"> 
 				
 	          	 <div class="overlay"></div>
 	          	</div>
-		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '80%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Rashan Rahul</span></h1>
@@ -191,7 +191,7 @@
 						<br>
 			            <h2>A Software Qulity Assurance Engineer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
-						<!-- <br> -->
+						<br> 
 			            <p><a href="https://www.linkedin.com/in/rashan-rahul-0740382bb/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
 							<a href="https://github.com/rashanrahul" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
